--- a/table.html
+++ b/table.html
@@ -139,7 +139,7 @@ tr:nth-child(even) {
   </tr>
     <!-- Row 9-->
   <tr>
-    <td><a href="http://www.esa.int/Applications/Observing_the_Earth/Copernicus/Sentinel-1/Introducing_Sentinel-1" target="_blank"></a>Sentinel-1</td>
+    <td><a href="http://www.esa.int/Applications/Observing_the_Earth/Copernicus/Sentinel-1/Introducing_Sentinel-1" target="_blank">Sentinel-1</a></td>
     <td>ESA</td>
     <td><a href="http://www.esa.int/Applications/Observing_the_Earth/Copernicus/Europe_s_Copernicus_programme" target="_blank">Copernicus Programme</a></td>
     <td>Active</td>
@@ -149,16 +149,6 @@ tr:nth-child(even) {
   </tr>
     <!-- Row 10-->
   <tr>
-    <td><a href="http://www.esa.int/Applications/Observing_the_Earth/Copernicus/Sentinel-1/Introducing_Sentinel-1" target="_blank"></a>Sentinel-1</td>
-    <td>ESA</td>
-    <td><a href="http://www.esa.int/Applications/Observing_the_Earth/Copernicus/Europe_s_Copernicus_programme" target="_blank">Copernicus Programme</a></td>
-    <td>Active</td>
-    <td>C-Band SAR</td>
-    <td>Continuity of C-Band SAR data for operational use</td>
-    <td><a href="https://directory.eoportal.org/web/eoportal/satellite-missions/c-missions/copernicus-sentinel-1" target="_blank">Sentinel-1</a></td>
-  </tr>
-    <!-- Row 11-->
-  <tr>
     <td><a href="http://www.esa.int/Applications/Observing_the_Earth/Copernicus/Sentinel-2/Introducing_Sentinel-2" target="_blank"></a>Sentinel-2</td>
     <td>ESA</td>
     <td><a href="http://www.esa.int/Applications/Observing_the_Earth/Copernicus/Europe_s_Copernicus_programme" target="_blank">Copernicus Programme</a></td>
@@ -166,6 +156,16 @@ tr:nth-child(even) {
     <td>C-Band SAR</td>
     <td>Supporting land monitoring related services</td>
     <td><a href="https://directory.eoportal.org/web/eoportal/satellite-missions/c-missions/copernicus-sentinel-2" target="_blank">Sentinel-2</a></td>
+  </tr>
+<!-- Row 11-->
+  <tr>
+    <td><a href="http://www.esa.int/Applications/Observing_the_Earth/Copernicus/Sentinel-3" target="_blank"></a>Sentinel-3</td>
+    <td>ESA</td>
+    <td><a href="http://www.esa.int/Applications/Observing_the_Earth/Copernicus/Europe_s_Copernicus_programme" target="_blank">Copernicus Programme</a></td>
+    <td>Active</td>
+    <td>OLCI, SLSTR, SRAL</td>
+    <td>Global land and ocean monitoring services</td>
+    <td><a href="https://eoportal.org/web/eoportal/satellite-missions/c-missions/copernicus-sentinel-3" target="_blank">Sentinel-3</a></td>
   </tr>
 </table>
 
